gccida/c1/exp_equiv_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/cse.c:3089:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v33 = ( ( unsigned int)( mode_class_0[BYTE2( v11)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/cse.c:3106:54: error: expected ')'
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/cse.c:3106:31: note: to match this '('
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/cse.c:3106:77: error: expected expression
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/cse.c:3107:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtint); 
 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/exp_equiv_p/src/obj/cse.o] Error 1
